src/test/resources/Parser/SyntaxErrors/InvalidOpenDeclaration1.front
class A<B>:
    open test<C>(c: C);